@@ -138,7 +138,7 @@ model_setup(
              par_values=parms,
              par_vary=[True, True, True, True, False, False, False, False, False, False],
              par_boundaries=boundaries,
-             par_constraints=[[2, ">", 1], [5, "<", 1], [7, "<", 5]],
+             par_constraints=[[2, ">", 1], [5, "<", 1], [7, ">", 5]],
              par_hr_labels=[
                             u"n",
                             u"τ₁ [ms]",
